# recaptcha-service

./: .env.example  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yml
examples/: verify.rs
examples/utils/: mod.rs
src/client/: lib.rs
src/client/routes/v1/: mod.rs
src/client/routes/v1/verify/: mod.rs  post.rs
src/service/: main.rs
src/service/routes/: get.rs  mod.rs
src/service/routes/v1/: mod.rs
src/service/routes/v1/verify/: mod.rs  post.rs
