[package]
name = "recaptcha-service"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
description = "A simplified and centralised interface for verifying reCAPTCHA tokens."
repository = "https://github.com/uniteme-pty-ltd/recaptcha-service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
time = { version = "0.3.17", features = ["serde-human-readable"] }
env_logger = "0.10.0"
num_cpus = "1"
derive_more = "0.99.17"
reqwest = { version = "0.11.14", features = ["json"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[lib]
name = "recaptcha_client"
path = "src/client/lib.rs"

[[bin]]
name = "recaptcha_service"
path = "src/service/main.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1